src/scss/_modal.scss
/* stylelint-disable declaration-no-important */

.wide-container {
    position: fixed;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 0px;
    left: 0px;
    z-index: 200;

    &.dc-doc-page {
        max-width: 100% !important;
    }

    .wide-content-viewer {
        visibility: hidden;
    }

    .wide-content-wrapper {
        z-index: 200;
        background-color: var(--yfm-color-modal-content, var(--yfm-color-modal-content-private));
        height: 90vh;
        width: 70vw;
        border-radius: 10px;
        display: flex;
        flex-direction: column;

        .wide-content {
            height: 95%;
            width: 100%;

            .wide-inner-element {
                max-width: 100%;
                width: 100%;
                scrollbar-width: thin;
                height: 100%;
            }

            table {
                border-radius: 0px;
            }

            .wide-thead-content {
                display: table;
                width: 100%;
            }
        }

        .wide-toolbar {
            display: flex;
            flex-direction: row;
            width: 100%;
            justify-content: space-between;
            align-items: center;
            padding: 10px 12px;
        }

        .wide-entity-name {
            margin: 0;
            font-size: 18px;
        }

        .wide-actions {
            align-self: flex-end;

            .close-action {
                cursor: pointer;
                border-radius: 3px;

                transition: background 300ms;

                &:hover {
                    background: var(
                        --yfm-color-modal-actions-hover,
                        var(--yfm-color-modal-actions-hover-private)
                    );
                }
            }
        }
    }
}

.wide-element-wrapper {
    display: flex;
    gap: 30px;
    position: relative;

    &:hover > .wide-content-viewer {
        visibility: visible;
    }

    .wide-inner-element {
        max-width: 700px;
    }
}

.wide-content-viewer {
    visibility: hidden;
    width: 30px;
    height: 30px;
    min-width: 30px;
    min-height: 30px;
    flex-shrink: 0;
    z-index: 100;
    padding: 6px;
    box-sizing: content-box;
    color: var(--yfm-color-modal-wide-content, var(--yfm-color-modal-wide-content-private));
    cursor: pointer;

    & > svg {
        width: 20px;
        height: 20px;
    }
}

.wide-content-overlay {
    z-index: 100;
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    background-color: var(
        --yfm-color-modal-wide-content-overlay,
        var(--yfm-color-modal-wide-content-overlay-private)
    );
    opacity: 0.6;
}

